# chessvision-py

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements_dev.txt
.github/workflows/: python-ci.yml
chessvision/: __init__.py  analyze.py  archetypes.py  elo_forecast.py  evaluator.py  features.py  models.py  parser.py  recommender.py
docs/vignettes/: 01_quickstart.md  02_coach.md  03_researcher.md
paper/: paper.bib  paper.md
quest/: chess2vec_quest.sh  job_a_stream.sh  job_b_stream.sh  job_c_train.sh  lichess_stream.py  train_chess2vec.py
scripts/: build_population_data.py  lichess_stream.py  train_chess2vec.py
tests/: test_analyze.py  test_archetypes.py  test_elo_forecast.py  test_evaluator.py  test_features.py  test_parser.py  test_recommender.py  test_smoke.py  test_stream.py
