[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "chessvision-py"
version = "0.1.0"
description = "Python library for computational chess performance analysis"
requires-python = ">=3.10"
dependencies = [
    "chess==1.11.2",
    "stockfish==4.0.8",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=23.0.0",
    "zstandard>=0.22.0",
    "gensim>=4.3.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py312"