[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chessvision-py"
version = "0.1.0"
description = "Computational chess performance analysis — ML-powered insights from personal PGN archives"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Rakkshet Singhaal", email = "rakkshet.singhaal@kellogg.northwestern.edu"}
]
keywords = ["chess", "machine-learning", "performance-analysis", "stockfish", "pgn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "chess==1.11.2",
    "stockfish==4.0.8",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=23.0.0",
    "zstandard>=0.22.0",
    "gensim>=4.3.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.6",
    "joblib>=1.3.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/chesslens-project/chessvision-py"
Repository = "https://github.com/chesslens-project/chessvision-py"
Issues = "https://github.com/chesslens-project/chessvision-py/issues"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.black]
line-length = 88
target-version = ["py312"]
