[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chessvision-py"
version = "0.1.0"
description = "Computational chess performance analysis — ML-powered insights from personal PGN archives"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Rakkshet Singhaal", email = "rakkshetsinghaal99@gmail.com"}
]
keywords = ["chess", "machine-learning", "performance-analysis", "stockfish", "pgn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "chess>=1.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "zstandard>=0.21.0",
    "gensim>=4.3.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/chesslens-project/chessvision-py"
Repository = "https://github.com/chesslens-project/chessvision-py"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.setuptools.packages.find]
include = ["chessvision*"]

[tool.setuptools]
license-files = []
